[package]
name = "0pass"
description = "A cross platform CLI password manager written in Rust intended as a backend for native GUI clients"
repository = "https://github.com/AndreVallestero/0pass"
readme = "README.md"
license = "AGPLv3"
version = "0.1.1"
authors = ["Andre Vallestero <andrevallestero@gmail.com>"]
edition = "2018"

[features]

[dependencies]
clap = "2.33.0"
dirs = "2.0.2"
block-modes = "0.3.3"
aes = "0.3.2"
hex-literal = "0.2.1"
sha2 = "0.8.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.46"

[profile.release]
opt-level = "s"